# healthlink-backend

./: .gitignore  .replit  manage.py  pyproject.toml
api/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_stockitem_facility_alter_stockitem_unique_together.py  0003_alter_adversedrugreaction_options_and_more.py
core/: urls.py
healthlink_backend/: asgi.py  settings.py  wsgi.py
